Bug 507601 - Crash while creating colour swatch with add color dialog.
Summary: Crash while creating colour swatch with add color dialog.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Microsoft Windows Microsoft Windows
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL: https://drive.google.com/drive/folder...
Keywords:
: 507834 508423 508987 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-07-28 17:07 UTC by Taina Cunha
Modified: 2025-09-01 02:05 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Taina Cunha 2025-07-28 17:07:58 UTC
My krita is crashing when I want to add a colour ta a swatch, the program closes and is with any colour and any swatch, there is not a specific one. Its in the krita 5.2.11 version.

SUMMARY
Crash when creating colour palette

STEPS TO REPRODUCE
1. Select a colour
2. Go to Add a new colour swatch
3. Click OK

OBSERVED RESULT
The colour swatch doesn't apear after the program crashes.

EXPECTED RESULT
The colour I chose to add on a swatch to apear in it.

SOFTWARE/OS VERSIONS
Windows 10
Krita 5.2.11
Comment 1 TraceyC 2025-07-28 20:40:49 UTC
Recategorizing properly
Comment 2 wolthera 2025-08-03 10:10:58 UTC
Thanks, I can reproduce. It is specifically the add color dialog that causes the crash.

In the meantime, Taina Cunha, you can add color swatches by just clicking an empty space. This will not crash.

--------- GDB Backtrace -----------------

Thread 1 "krita" received signal SIGSEGV, Segmentation fault.
KisSwatchGroup::columnCount (this=this@entry=0x0) at /home/appimage/persistent/krita/libs/pigment/resources/KisSwatchGroup.cpp:141
141         return d->colorMatrix.size();
(gdb) bt
#0  KisSwatchGroup::columnCount (this=this@entry=0x0) at /home/appimage/persistent/krita/libs/pigment/resources/KisSwatchGroup.cpp:141
#1  0x00007ffff439831d in KisSwatchGroup::addSwatch (this=0x0, swatch=...) at /home/appimage/persistent/krita/libs/pigment/resources/KisSwatchGroup.cpp:158
#2  0x00007ffff7a9964a in KisPaletteEditor::addEntry (this=this@entry=0x55555edad4f0, color=...)
    at /home/appimage/appimage-workspace/deps/usr/include/QtCore/qsharedpointer_impl.h:298
#3  0x00007fffb806cb3d in PaletteDockerDock::slotAddColor (this=0x55555f274b20)
    at /home/appimage/persistent/krita/plugins/dockers/palettedocker/palettedocker_dock.cpp:352
#4  0x00007ffff5687028 in ?? () from /home/appimage/appimage-workspace/deps/usr/lib/libQt5Core.so.5
#5  0x00007ffff6142c76 in QAction::triggered(bool) () from /home/appimage/appimage-workspace/deps/usr/lib/libQt5Widgets.so.5
#6  0x00007ffff61459bc in QAction::activate(QAction::ActionEvent) () from /home/appimage/appimage-workspace/deps/usr/lib/libQt5Widgets.so.5
#7  0x00007ffff6241f7a in ?? () from /home/appimage/appimage-workspace/deps/usr/lib/libQt5Widgets.so.5
#8  0x00007ffff62420d7 in QAbstractButton::mouseReleaseEvent(QMouseEvent*) () from /home/appimage/appimage-workspace/deps/usr/lib/libQt5Widgets.so.5
#9  0x00007ffff6340e1e in QToolButton::mouseReleaseEvent(QMouseEvent*) () from /home/appimage/appimage-workspace/deps/usr/lib/libQt5Widgets.so.5
#10 0x00007ffff618cc9e in QWidget::event(QEvent*) () from /home/appimage/appimage-workspace/deps/usr/lib/libQt5Widgets.so.5
#11 0x00007ffff61497e3 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /home/appimage/appimage-workspace/deps/usr/lib/libQt5Widgets.so.5
#12 0x00007ffff615146e in QApplication::notify(QObject*, QEvent*) () from /home/appimage/appimage-workspace/deps/usr/lib/libQt5Widgets.so.5
#13 0x00007ffff7b98d85 in KisApplication::notify (this=0x7fffffffe040, receiver=0x55555f2a8430, event=0x7fffffffd670)
    at /home/appimage/persistent/krita/libs/ui/KisApplication.cpp:820
#14 0x00007ffff564ef4a in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /home/appimage/appimage-workspace/deps/usr/lib/libQt5Core.so.5
#15 0x00007ffff614ff39 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool, bool) ()
   from /home/appimage/appimage-workspace/deps/usr/lib/libQt5Widgets.so.5
#16 0x00007ffff61a65b0 in ?? () from /home/appimage/appimage-workspace/deps/usr/lib/libQt5Widgets.so.5
#17 0x00007ffff61a9a65 in ?? () from /home/appimage/appimage-workspace/deps/usr/lib/libQt5Widgets.so.5
#18 0x00007ffff61497e3 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /home/appimage/appimage-workspace/deps/usr/lib/libQt5Widgets.so.5
#19 0x00007ffff7b98d85 in KisApplication::notify (this=0x7fffffffe040, receiver=0x555558edb8a0, event=0x7fffffffd9d0)
    at /home/appimage/persistent/krita/libs/ui/KisApplication.cpp:820
#20 0x00007ffff564ef4a in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /home/appimage/appimage-workspace/deps/usr/lib/libQt5Core.so.5
#21 0x00007ffff5a82857 in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) ()
   from /home/appimage/appimage-workspace/deps/usr/lib/libQt5Gui.so.5
#22 0x00007ffff5a5682c in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) ()
   from /home/appimage/appimage-workspace/deps/usr/lib/libQt5Gui.so.5
#23 0x00007fffefea73ee in ?? () from /home/appimage/appimage-workspace/deps/usr/lib/libQt5XcbQpa.so.5
#24 0x00007ffff288617d in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#25 0x00007ffff2886400 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#26 0x00007ffff28864a3 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#27 0x00007ffff56a8a58 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) ()
   from /home/appimage/appimage-workspace/deps/usr/lib/libQt5Core.so.5
#28 0x
Comment 3 wolthera 2025-08-03 12:29:33 UTC
Git commit 7a6aa07d20ca2d627ca2f52ae447fc0133f54295 by Wolthera van Hövell tot Westerflier.
Committed on 03/08/2025 at 12:29.
Pushed by woltherav into branch 'master'.

Fix crash in palette docker with add swatch dialog.

M  +11   -3    libs/ui/KisPaletteEditor.cpp

https://invent.kde.org/graphics/krita/-/commit/7a6aa07d20ca2d627ca2f52ae447fc0133f54295
Comment 4 wolthera 2025-08-03 12:30:09 UTC
Git commit 87789f3c35e2eb246e02b8ed91982d7b80f3d021 by Wolthera van Hövell.
Committed on 03/08/2025 at 12:30.
Pushed by woltherav into branch 'krita/5.2'.

Fix crash in palette docker with add swatch dialog.


(cherry picked from commit 7a6aa07d20ca2d627ca2f52ae447fc0133f54295)

Co-authored-by: Wolthera van Hövell tot Westerflier <griffinvalley@gmail.com>

M  +11   -3    libs/ui/KisPaletteEditor.cpp

https://invent.kde.org/graphics/krita/-/commit/87789f3c35e2eb246e02b8ed91982d7b80f3d021
Comment 5 wolthera 2025-08-04 07:17:29 UTC
*** Bug 507834 has been marked as a duplicate of this bug. ***
Comment 6 Nicholas LaPointe 2025-09-01 02:05:42 UTC
*** Bug 508423 has been marked as a duplicate of this bug. ***
Comment 7 Nicholas LaPointe 2025-09-01 02:05:48 UTC
*** Bug 508987 has been marked as a duplicate of this bug. ***