Fix crash in palette docker with add swatch dialog.

BUG:507601


(cherry picked from commit 7a6aa07d20ca2d627ca2f52ae447fc0133f54295)

Co-authored-by: Wolthera van Hövell tot Westerflier <griffinvalley@gmail.com>